--- a/index-main.html
+++ b/index-main.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="ManageIQ Documentation">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>AsciiBinder Site Template</title>
+    <title>ManageIQ Docmentation</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -18,18 +19,21 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="shortcut icon" href="http://manageiq.org/images/favicon.ico" type="image/x-icon"/>
+    <link rel="image_src" href="http://manageiq.org/images/logo/manageiq-logo-standard.svg"/>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="page-header" style='background-image: url("_images/book_pages_bg.jpg"); background-position: right bottom; background-repeat: no-repeat; background-size: cover;'>
-          <img src="_images/asciibinder_web_logo.svg" class="img-responsive" />
+        <div class="page-header" style='background-image: url("http://manageiq.org/images/header-paintedcandy.jpg"); background-position: right bottom; background-repeat: no-repeat; background-size: cover;'>
+          <img src="http://manageiq.org/images/logo/manageiq-logo-glyph.svg" class="img-responsive" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-8">
-          <h4><strong>What <em>is</em> AsciiBinder?</strong></h4>
-          <p>AsciiBinder is a documentation system for people who have a lot of docs to maintain and republish on a regular basis. AsciiBinder was specifically developed to solve two problems at once:</p>
+          <h4><strong>What <em>is</em> ManageIQ?</strong></h4>
+          <p>AsciiBinder is a documentation system built on <a href="http://asciidoctor.org/">Asciidoctor</a> for people who have a lot of docs to maintain and republish on a regular basis. AsciiBinder was specifically developed to solve two problems at once:</p>
           <ul>
             <li>Make it easier for developers and community members to contribute documentation.</li>
             <li>Make it easier for content managers to build and publish several variants of the same documentation.</li>
@@ -49,19 +53,15 @@
           <p>&nbsp;</p>
         </div>
         <div class="col-md-4">
-          <h5><strong>Installation</strong></h5>
+          <h4><strong>Installation</strong></h4>
           <ol>
             <li>Install Ruby</li>
+            <li>Install a Java JVM (for <a href="http://ditaa.sourceforge.net/">ditaa</a> support)
             <li><code>gem install ascii_binder</code></li>
           </ol>
           <p>&nbsp;</p>
-          <h5><strong>Reference</strong></h5>
+          <h4><strong>Documentation</strong></h4>
           <div class="list-group">
-            <a href="https://github.com/redhataccess/ascii_binder" class="list-group-item">
-              <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-              <span class="sr-only">GitHub</span>
-              &nbsp;AsciiBinder on Github
-            </a>
             <a href="/latest/welcome/" class="list-group-item">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
               <span class="sr-only">Pencil</span>
@@ -72,13 +72,36 @@
               <span class="sr-only">Gear</span>
               &nbsp;AsciiBinder User's Guide
             </a>
-            <a href="#" class="list-group-item">
+            <a href="/latest/guides/maintainer_guide.html" class="list-group-item">
               <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
               <span class="sr-only">Wrench</span>
               &nbsp;AsciiBinder Maintainer's Guide
             </a>
           </div>
+          <p>&nbsp;</p>
+          <h4><strong>Get Involved!</strong></h4>
+          <div class="list-group">
+            <a href="https://github.com/ManageIQ" class="list-group-item">
+              <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+              <span class="sr-only">GitHub</span>
+              &nbsp;ManageIQ organization on Github
+            </a>
+            <a href="https://github.com/ManageIQ/manageiq" class="list-group-item">
+              <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+              <span class="sr-only">GitHub</span>
+              &nbsp;ManageIQ project on Github
+            </a>
+            <a href="https://twitter.com/manageiq" class="list-group-item">
+              <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
+              <span class="sr-only">Twitter</span>
+              &nbsp;@manageiq on Twitter
+            </a>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <hr />
+        <p class="small">ManageIQ is an open source project dual licensed under the <a href="https://github.com/manageiq/manageiq/blob/master/LICENSE.txt">Apache License 2.0 or GPLv2</a>.</p>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
