More cleanup due to upgrade to AsciiBinder

--- a/index-community.html
+++ b/index-community.html
@@ -26,8 +26,8 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="page-header" style='background-image: url("http://manageiq.org/images/header-paintedcandy.jpg"); background-position: right bottom; background-repeat: no-repeat; background-size: cover;'>
-          <img src="http://manageiq.org/images/logo/manageiq-logo-glyph.svg" class="img-responsive" />
+        <div class="page-header" style='background-image: url("http://manageiq.org/images/header-paintedcandy.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover;'>
+          <img src="http://manageiq.org/images/logo/manageiq-logo-standard.svg" class="img-responsive" />
         </div>
       </div>
       <div class="row">
@@ -84,12 +84,12 @@
             <a href="https://github.com/ManageIQ" class="list-group-item">
               <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
               <span class="sr-only">GitHub</span>
-              &nbsp;ManageIQ organization on Github
+              &nbsp;ManageIQ organization on GitHub
             </a>
             <a href="https://github.com/ManageIQ/manageiq" class="list-group-item">
               <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
               <span class="sr-only">GitHub</span>
-              &nbsp;ManageIQ project on Github
+              &nbsp;ManageIQ project on GitHub
             </a>
             <a href="https://twitter.com/manageiq" class="list-group-item">
               <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
