Changed dual license to Apache License only

--- a/index-community.html
+++ b/index-community.html
@@ -101,7 +101,7 @@
       </div>
       <div class="row">
         <hr />
-        <p class="small">ManageIQ is an open source project dual licensed under the <a href="https://github.com/manageiq/manageiq/blob/master/LICENSE.txt">Apache License 2.0 or GPLv2</a>.</p>
+        <p class="small">ManageIQ is an open source project licensed under the <a href="https://github.com/manageiq/manageiq/blob/master/LICENSE.txt">Apache License 2.0</a>.</p>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
